@@ -616,7 +616,6 @@
   
         <unitList>
                 <unit name="infantry"/>
-				<unit name="chineseInfantry"/>
                 <unit name="armour"/>
                 <unit name="fighter"/>
                 <unit name="bomber"/>
@@ -1102,16 +1101,7 @@
                          <option name="defense" value="2"/>
                          <option name="artillerySupportable" value="true"/>
                 </attatchment>
-				
-				<!-- Chinese Infantry -->
-				<attatchment name="unitAttatchment" attatchTo="chineseInfantry" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
-						<option name="movement" value="1"/>
-                         <option name="isInfantry" value="true"/>
-						<option name="attack" value="1"/>
-						<option name="defense" value="2"/>
-						<option name="artillerySupportable" value="true"/>
-				</attatchment>
-
+			
                 <!-- Artillery -->
                 <attatchment name="unitAttatchment" attatchTo="artillery" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
                          <option name="movement" value="1"/>
